--- a/README.org
+++ b/README.org
@@ -35,7 +35,7 @@ Now I can start =ryo-modal-mode= by pressing =C-c SPC=, and get vim-like =hjkl=-
 
 When defining keys the first argument of each binding is the key (will be wrapped inside =kbd=) and the second argument is the /target/; usually a command or a string representing a keypress that should be simulated. The rest of the arguments are keyword pairs, providing extra features. The following keywords exist:
 
-- =:name= :: =ryo-modal= creates a new symbol for the command you bind. By default this name will depend on the target of the binding, but by using =:name= and a string you can give it your own name.
+- =:name= :: =ryo-modal= creates a new symbol for the command you bind. By default this name will depend on the target of the binding, but by using =:name= and a string you can give it your own name. It is perfectly fine to have whitespace, or any other symbol, in the name.
 - =:mode= :: If =:mode= is set to a quoted major mode symbol (for instance =:mode 'org-mode=) the command will only be active in that major mode. If you have a lot of major mode specific bindings, you may want to use =ryo-modal-major-mode-keys= instead to reduce clutter.
 - =:exit= :: By providing =:exit t= you will exit =ryo-modal-mode= before running the command. This is useful if you have a command and always want to input text after running it.
 - =:read= :: If =:read t= you will be prompted to insert a string in the minibuffer after running the command, and this string will be inserted into the buffer. This can be useful if you want to have a command which for instance replaces a word with another word, without exiting =ryo-modal-mode=.
@@ -60,16 +60,32 @@ In order to get an overview of all the bindings you've defined, use =M-x ryo-mod
 
 ** Prefix keys
 
-Sometimes you want many keys bound under the same prefix key. A convenient way of doing this is to let the /target/ be a list of the keys in the prefix map. Each element of the list will be sent to =ryo-modal-key=, using the key as a prefix. An example of using =SPC= as a prefix:
+Sometimes you want many keys bound under the same prefix key. A convenient way of doing this is to let the /target/ be a list of the keys in the prefix map. Each element of the list will be sent to =ryo-modal-key=, using the key as a prefix. If the key has any arguments, these will be sent too. Prefix examples:
 
 #+BEGIN_SRC emacs-lisp
   (ryo-modal-key
    "SPC" '(("s" save-buffer)
            ("g" magit-status)
            ("b" ibuffer-list-buffers)))
+
+  (ryo-modal-keys
+   ("v"
+    (("w" er/mark-word :name "Mark word")
+     ("d" er/mark-defun :name "Mark defun")
+     ("s" er/mark-sentence :name "Mark sentence")))
+   ("k"
+    (("w" er/mark-word :name "Kill word")
+     ("d" er/mark-defun :name "Kill defun")
+     ("s" er/mark-sentence :name "Kill sentence"))
+    :then '(kill-region))
+   ("c"
+    (("w" er/mark-word :name "Change word")
+     ("d" er/mark-defun :name "Change defun")
+     ("s" er/mark-sentence :name "Change sentence"))
+    :then '(kill-region) :exit t))
 #+END_SRC
 
-The target should /not be quoted/ if using =ryo-modal-keys=.
+Notice that the target should /not be quoted/ if using =ryo-modal-keys=, but it should if using =ryo-modal-key=.
 
 ** Creating and binding hydras to keys
 
@@ -94,7 +110,7 @@ In order to create a hydra, bind it to a key using =ryo-modal-key= or =ryo-modal
 
 ** Remove =ryo:= text from =which-key=
 
-If you're using [[https://github.com/justbur/emacs-which-key][which-key]] you might be annoyed that =ryo= prefixes every command with =ryo:= (the reason for doing that is to avoid namespace clashes). In order to avoid that you can add the following line to your init-file:
+If you're using [[https://github.com/justbur/emacs-which-key][which-key]] you might be annoyed that =ryo= prefixes every command with =ryo:=. In order to avoid that you can add the following line to your init-file:
 
 #+BEGIN_SRC emacs-lisp
 (push '((nil . "ryo:") . (nil . "")) which-key-replacement-alist)
@@ -141,5 +157,5 @@ A lot of inspiration and code peeking from [[https://github.com/mrkkrp/modalka][
 
 * Changelog
 
-- February 2017 :: Added =ryo-modal-major-mode-keys= (0.2).
+- February 2017 :: Added =ryo-modal-major-mode-keys=. Also possible to use keywords on all keys with a prefix (0.2).
 - October 2016 :: Initial version (0.1).
