--- a/README.org
+++ b/README.org
@@ -13,25 +13,27 @@ Here's a simple configuration, using [[https://github.com/jwiegley/use-package][
     :commands ryo-modal-mode
     :bind ("C-c SPC" . ryo-modal-mode)
     :config
+    (define-key ryo-modal-mode-map (kbd ",") 'ryo-modal-repeat)
+    (add-to-list 'ryo-modal-bindings-list '("," "ryo-modal-repeat"))
     (ryo-modal-keys
      ("q" ryo-modal-mode)
-     ("0" "M-0")
-     ("1" "M-1")
-     ("2" "M-2")
-     ("3" "M-3")
-     ("4" "M-4")
-     ("5" "M-5")
-     ("6" "M-6")
-     ("7" "M-7")
-     ("8" "M-8")
-     ("9" "M-9")
+     ("0" "M-0" :norepeat t)
+     ("1" "M-1" :norepeat t)
+     ("2" "M-2" :norepeat t)
+     ("3" "M-3" :norepeat t)
+     ("4" "M-4" :norepeat t)
+     ("5" "M-5" :norepeat t)
+     ("6" "M-6" :norepeat t)
+     ("7" "M-7" :norepeat t)
+     ("8" "M-8" :norepeat t)
+     ("9" "M-9" :norepeat t)
      ("h" backward-char)
      ("j" next-line)
      ("k" previous-line)
      ("l" forward-char)))
 #+END_SRC
 
-Now I can start =ryo-modal-mode= by pressing =C-c SPC=, and get vim-like =hjkl=-navigation and use digit arguments by pressing the number keys. Notice that other keys are unmodified, so pressing =r= would insert =r= into the buffer.
+Now I can start =ryo-modal-mode= by pressing =C-c SPC=, and get vim-like =hjkl=-navigation and use digit arguments by pressing the number keys. Notice that other keys are unmodified, so pressing =r= would insert =r= into the buffer. Because of how =ryo= handle things, the normal =repeat= work badly for =ryo= commands; you can use =ryo-modal-repeat= instead. Note that =ryo-modal-repeat= /should not/ be bound using =ryo-modal-key=, but instead using =define-key= or =bind-key=, binding it in =ryo-modal-map=.
 
 When defining keys the first argument of each binding is the key (will be wrapped inside =kbd=) and the second argument is the /target/; usually a command or a string representing a keypress that should be simulated. The rest of the arguments are keyword pairs, providing extra features. The following keywords exist:
 
@@ -40,6 +42,7 @@ When defining keys the first argument of each binding is the key (will be wrappe
 - =:exit= :: By providing =:exit t= you will exit =ryo-modal-mode= before running the command. This is useful if you have a command and always want to input text after running it.
 - =:read= :: If =:read t= you will be prompted to insert a string in the minibuffer after running the command, and this string will be inserted into the buffer. This can be useful if you want to have a command which for instance replaces a word with another word, without exiting =ryo-modal-mode=.
 - =:then= :: By providing a quoted list of command symbols to =:then= you can specify additional commands that should be run after the first. This way you can easily define command chains, without using =defun= or similar.
+- =:norepeat= :: If you specify =:norepeat t= then using the binding will /not/ make it overwrite the current command being triggered by =ryo-modal-repeat=.
 
 Here's an example using the keyword arguments (can be used in =ryo-modal-keys= too), and an example of =ryo-modal-major-mode-keys=:
 
@@ -157,5 +160,5 @@ A lot of inspiration and code peeking from [[https://github.com/mrkkrp/modalka][
 
 * Changelog
 
-- February 2017 :: Added =ryo-modal-major-mode-keys=. Also possible to use keywords on all keys with a prefix (0.2).
+- February 2017 :: Added =ryo-modal-major-mode-keys=. Also possible to use keywords on all keys with a prefix. Added =ryo-modal-repeat= (0.2).
 - October 2016 :: Initial version (0.1).
