--- a/README.org
+++ b/README.org
@@ -43,7 +43,7 @@ Now I can start =ryo-modal-mode= by pressing =C-c SPC=, and get vim-like =hjkl=-
 
 When defining keys the first argument of each binding is the key (will be wrapped inside =kbd=) and the second argument is the /target/; usually a command or a string representing a keypress that should be simulated. The rest of the arguments are keyword pairs, providing extra features. The following keywords exist:
 
-- =:name= :: =ryo-modal= creates a new symbol for the command you bind. By default this name will depend on the target of the binding, but by using =:name= and a string you can give it your own name. It is perfectly fine to have whitespace, or any other symbol, in the name.
+- =:name= :: The name of the binding. By default this name will depend on the target of the binding, but by using =:name= and a string you can give it your own name. It is perfectly fine to have whitespace, or any other symbol, in the name.
 - =:mode= :: If =:mode= is set to a quoted major or minor mode symbol (for instance =:mode 'org-mode=) the command will only be active in that mode (or in a major mode that derives from it). If you have a lot of major mode specific bindings, you may want to use =ryo-modal-major-mode-keys= instead to reduce clutter.
 - =:exit= :: By providing =:exit t= you will exit =ryo-modal-mode= before running the command. This is useful if you have a command and always want to input text after running it.
 - =:read= :: If =:read t= you will be prompted to insert a string in the minibuffer after running the command, and this string will be inserted into the buffer. This can be useful if you want to have a command which for instance replaces a word with another word, without exiting =ryo-modal-mode=.
@@ -208,34 +208,7 @@ Notice that the target should not be quoted if using =:ryo= (although the third 
 
 ** =which-key= integration
 
-If you're using [[https://github.com/justbur/emacs-which-key][which-key]] you might be annoyed that =ryo= prefixes some commands with =ryo:<hash>:=. In order to remove that from the =which-key= menus, add this to your init-file:
-
-#+BEGIN_SRC emacs-lisp
-(push '((nil . "ryo:.*:") . (nil . "")) which-key-replacement-alist)
-#+END_SRC
-
-If you use prefix keys you can name these, making =which-key= show something useful instead of =+prefix=:
-
-#+BEGIN_SRC emacs-lisp
-  (ryo-modal-keys
-   ("v"
-    (("w" er/mark-word :name "Mark word")
-     ("d" er/mark-defun :name "Mark defun")
-     ("s" er/mark-sentence :name "Mark sentence"))
-    :name "mark")
-   ("k"
-    (("w" er/mark-word :name "Kill word")
-     ("d" er/mark-defun :name "Kill defun")
-     ("s" er/mark-sentence :name "Kill sentence"))
-    :name "kill" :then '(kill-region))
-   ("c"
-    (("w" er/mark-word :name "Change word")
-     ("d" er/mark-defun :name "Change defun")
-     ("s" er/mark-sentence :name "Change sentence"))
-    :name "change" :then '(kill-region) :exit t))
-#+END_SRC
-
-If you have an old version of =which-key= you may need to update it, since =which-key-replacement-alist= and wasn't there from the beginning.
+[[https://github.com/justbur/emacs-which-key][which-key]] respects the =:name= keyword of both prefixes and commands.
 
 * Keybindings when region is active
 
@@ -276,6 +249,7 @@ A lot of inspiration and code peeking from [[https://github.com/mrkkrp/modalka][
 
 * Changelog
 
+- August 2024 :: Some tweaks to the =:name= keyword. There's no longer a need to use =which-key-replacement-alist= when using =which-key=.
 - November 2020 :: =:mc-all= keyword added, to be used by =muliple-cursors=.
 - October 2019 :: The =:mode= keyword now works on modes which derive from the specified mode.
 - March 2018 :: Support for naming prefix keys with =which-key=.
